# study

./: .clang-format  CMakeLists.txt  README
include/: Sample.hpp  TestClass.hpp
src/: Sample.cpp  TestClass.cpp  main.cpp
